# nyx_rest

./: .dockerignore  .gitignore  Dockerfile  Dockerfile8  Dockerfile8 2  Dockerfile8-3.9  Dockerfile_resthelper  auto-docker.sh  auto-docker_resthelper.sh  logstash_test.db  requirements.txt
.github/workflows/: docker-image.yml
sources/: common.py  logstash_test.db  nyx_rest_api_plus.py  nyx_rest_helper.py  pg_common.py  pyproject.toml  requirements.txt  requirements8-3.9.txt  requirements8.txt  requirements_resthelper.txt  start.sh  test.ipynb
sources/.history/: nyx_rest_api_plus_20191118165857.py  nyx_rest_api_plus_20191118171153.py  nyx_rest_api_plus_20191118171243.py  nyx_rest_api_plus_20191118175519.py
sources/.history/lib/: ext_schamps_20191118165247.py  ext_schamps_20191118171759.py  ext_schamps_20191118175349.py
sources/lib/: ext_biac 2.py  ext_biac.py  ext_datasource.py  ext_optiboard.py  ext_parl 2.py  ext_parl.py  ext_schamps.py  ext_sigfox.py  ext_test.py  ext_weather.py
sources/logs/: .nyx_rest_api.log 2.2019-11-18.icloud  .nyx_rest_api.log 2.2021-03-11.icloud  nyx_rest_api.log.2019-11-18  nyx_rest_api.log.2021-03-11  nyx_rest_api.log.2021-04-29  nyx_rest_api.log.2022-11-30  nyx_rest_api.log.2023-02-16
