[tool.poetry]
name = "sources"
version = "0.1.0"
description = ""
authors = ["Julian Fickers <96172826+julianfickerseq@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
jwt = "^1.3.1"
flask = "^2.2.3"
redis = "^4.5.1"
prison = "^0.2.1"
python-dateutil = "^2.8.2"
cachetools = "^5.3.0"
requests = "^2.28.2"
pandas = "1.1.0"
elasticsearch = "8.0.0"
httplib2 = "^0.21.0"
passlib = "^1.7.4"
oauth2client = "^4.1.3"
flask-cors = "^3.0.10"
amqstompclient = "^1.1.14"
python-logstash-async = "^2.5.0"
tzlocal = "^4.2"
stomp-py = "^8.1.0"
flask-restx = "^1.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
